# espled

./: 1  Cargo.toml  README.md  \  flake.nix  sdkconfig.defaults  test_request.py
.cargo/: config.toml
espled/: Cargo.toml  flake.nix  monitor.py  sdkconfig.defaults
espled-gui/: Cargo.toml  flake.nix
espled-gui/src/: control_thread.rs  main.rs
espled-gui/src/views/: connection.rs  editor.rs  message.rs  mod.rs  monitor.rs
espled/.cargo/: config.toml
espled/src/: main.rs  rgb.rs  rgbcontrol.rs  serial_configuration.rs  server.rs
espled/src/effects/: decay.rs  direct.rs  huerotate.rs  mod.rs
protocol/src/: lib.rs
src/: credentials.rs  main.rs  main_old.rs  rgb.rs  rgbcontrol.rs  serial_configuration.rs  server.rs
