[package]
name = "espled-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
eframe = "0.29.1"
egui_extras = "0.29.1"
env_logger = "0.11.5"
log = "0.4.22"
serialport = "4.6"
protocol = { path = "../protocol" }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"